unpackaged/main/default/objects/Business__c/fields/Business_City__c.field-meta.xml
<CustomField>
    <fullName>Business_City__c</fullName>
    <label>Business City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>