unpackaged/main/default/objects/Business__c/fields/Business_NAICs__c.field-meta.xml
<CustomField>
    <fullName>Business_NAICs__c</fullName>
    <label>Business NAICs</label>
    <length>50</length>
    <type>Text</type>
</CustomField>