unpackaged/main/default/objects/Business__c/fields/Business_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_Email__c</fullName>
    <label>Business Owner Email</label>
    <type>Email</type>
</CustomField>