unpackaged/main/default/objects/Business__c/fields/Business_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_Name__c</fullName>
    <label>Business Owner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>