unpackaged/main/default/objects/Business__c/fields/Business_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_Phone__c</fullName>
    <label>Business Owner Phone</label>
    <type>Phone</type>
</CustomField>