unpackaged/main/default/objects/Business__c/fields/Business_Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_Title__c</fullName>
    <label>Business Owner Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>