unpackaged/main/default/objects/Business__c/fields/Business_State__c.field-meta.xml
<CustomField>
    <fullName>Business_State__c</fullName>
    <label>Business State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>