unpackaged/main/default/objects/Business__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
                <label>llc</label>
            </value>
            <value>
                <fullName>C Corporation</fullName>
            </value>
            <value>
                <fullName>S Corporation</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>