unpackaged/main/default/objects/Business__c/fields/businessCityStateZipCode__c.field-meta.xml
<CustomField>
    <fullName>businessCityStateZipCode__c</fullName>
    <description>This field contains the business&#39;s city, the state they are located in, and the zip code of the area they are in; this field combines the three fields</description>
    <formula>Business_City__c &amp; &quot;, &quot; &amp; Business_State__c &amp; &quot;, &quot; &amp; Business_Zip_Code__c</formula>
    <label>businessCityStateZipCode</label>
    <type>Text</type>
</CustomField>