unpackaged/main/default/objects/Business__c/fields/Do_you_have_W_2_Employees__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_W_2_Employees__c</fullName>
    <label>Do you have W-2 Employees?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>