unpackaged/main/default/objects/Business__c/fields/FEIN__c.field-meta.xml
<CustomField>
    <fullName>FEIN__c</fullName>
    <label>FEIN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>