unpackaged/main/default/objects/Business__c/fields/How_many_W_2_Employees__c.field-meta.xml
<CustomField>
    <fullName>How_many_W_2_Employees__c</fullName>
    <label>How many W-2 Employees?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>