unpackaged/main/default/objects/Business__c/fields/Other_Business_Info__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Info__c</fullName>
    <label>Other Business Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>