unpackaged/main/default/objects/Business__c/fields/Related_Client__c.field-meta.xml
<CustomField>
    <fullName>Related_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Businesses</relationshipLabel>
    <relationshipName>Businesses</relationshipName>
    <type>Lookup</type>
</CustomField>