unpackaged/main/default/objects/Business__c/fields/Velocify_Id__c.field-meta.xml
<CustomField>
    <fullName>Velocify_Id__c</fullName>
    <externalId>true</externalId>
    <label>Velocify Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>